@@ -16,5 +16,3 @@ LRV_EAX_OFFSET		offsetof (struct La_i86_retval, lrv_eax)
 LRV_EDX_OFFSET		offsetof (struct La_i86_retval, lrv_edx)
 LRV_ST0_OFFSET		offsetof (struct La_i86_retval, lrv_st0)
 LRV_ST1_OFFSET		offsetof (struct La_i86_retval, lrv_st1)
-LRV_BND0_OFFSET		offsetof (struct La_i86_retval, lrv_bnd0)
-LRV_BND1_OFFSET		offsetof (struct La_i86_retval, lrv_bnd1)
